Phase 2: migrate persistence layer to JPA (#17)
* refactor: migrate persistence layer to jpa

* docs: clarify jpa migration review notes

* docs: translate migration comments to chinese